<resources>
    <string name="app_name">diyetisProje</string>
    <string name="aaa">aaa</string>
    <string name="sd">sd</string>
    <string name="index">index</string>
    <string name="diyet">diyet</string>
    <string name="yiyecekler">yiyecekler</string>
    <string name="ddd">ddd</string>
    <string name="asd">asd</string>
    <string name="bo">BOŞ</string>
    <string name="vucut_kitle_ndex_hesaplama">Vucut Kitle İndex Hesaplama</string>
    <string name="diyet_sat_n_al">Diyet Satın Al</string>
    <string name="kalori_hesapla">Kalori Hesapla</string>
    <string name="besin_g_nl">Besin Günlüğü</string>
    <string name="g_n_n_diyet_men_s">Günün diyet menüsü</string>
    <string name="yiyecek_kalori_tablosu">Yiyecek Kalori Tablosu</string>
    <string name="Diyetisyenler">Diyetisyenler</string>
    <string name="diyet_satin_al">Diyet Satin Al</string>
    <string name="hesapla">Hesapla</string>
    <string name="boyunuz">Boyunuz</string>
    <string name="kad_n">Kadın</string>
    <string name="erkek">Erkek</string>
    <string name="kilonuz">Kilonuz</string>
    <string name="cinsiyetiniz">Cinsiyetiniz</string>
    <string name="diyetsilerin"> Diyetisyenleri tutuğumuz yer</string>
    <string name="v_cut_kitle_ndeksi_hesaplama">Vücut Kitle İndeksi Hesaplama</string>
    <string name="resim4">resim4</string>
    <string name="resim5">resim5</string>
    <string name="resim3">resim3</string>
    <string name="string_resim3" />
    <string name="resim2">resim2</string>
    <string name="resim1">resim1</string>
    <string name="button">Button</string>
    <string name="todo1">TODO</string>
    <string name="tools">tools</string>
    <string name="t_string_tools">t@string/tools</string>
    <string name="uye_giris">ÜYE GİRİŞİ</string>
    <string name="kayit_ol">KAYIT OL</string>
    <string name="uye_olmadan_devam_et">Üye olmadan devam et</string>
    <string name="kayit_oll">Kayit Ol</string>
    <string name="ad_soyad">Ad Soyad</string>
    <string name="kullanici_adi">Kullanici Adi</string>
    <string name="eposta">Eposta</string>
    <string name="sifre1">Sifre</string>
    <string name="giris_yap">Giris yap</string>
    <string name="sifre2">Sifre</string>
    <string name="kullan_c_ad">Kullanıcı Adı</string>
    <string name="sifremi_unuttum">Sifremi Unuttum</string>
    <string name="kayit_ol_giris">Kayit Ol</string>
    <string name="giris_sayfa_sifre">Sifre</string>
    <string name="kayit_sayfa_sifre">Sifre</string>
    <string name="diy2">diy2</string>
    <string name="diy3">diy3</string>
    <string name="diy5">diy5</string>
    <string name="diy1">diy1</string>
    <string name="diy4">diy4</string>
    <string name="dyt_orkun_korkmaz">DYT. ORKUN KORKMAZ</string>
    <string name="orkunkorkma_gmail_com">orkunkorkma@gmail.com</string>
    <string name="hakk_nda">Hakkında</string>
    <string name="tekirda_anadolu_lisesi_nde_e_itim_alarak_lisans_ncesi_e_itimini_y_ksek_onur_derecesi_ile_bitirdi_2011_y_l_nda_yeditepe_niversitesi_ne_ba_lad_yeditepe_niversitesi_b_nyesinde_2015_y_l_nda_ana_dal_olan_hem_irelik_b_l_m_nden_2016_y_l_nda_ift_anadal_olan_beslenme_ve_diyetetik_b_l_m_nden_2017_y_l_nda_ise_yandal_olan_genetik_ve_biyom_hendislik_b_l_m_nden_y_ksek_onur_dereceleri_ile_mezun_oldu">Tekirdağ Anadolu Lisesi’nde eğitim alarak lisans öncesi eğitimini yüksek onur derecesi ile bitirdi. 2011 yılında Yeditepe Üniversitesi’ne başladı. Yeditepe Üniversitesi bünyesinde 2015 yılında Ana dalı olan Hemşirelik Bölümü’nden, 2016 yılında Çift anadalı olan Beslenme ve Diyetetik Bölümü’nden, 2017 yılında ise Yandalı olan Genetik ve Biyomühendislik Bölümü’nden yüksek onur dereceleri ile mezun oldu.</string>
    <string name="uzmanl_k_alan">Uzmanlık Alanı</string>
    <string name="i_manl_k_obezite_ndiyabet_eker_hastal_nkilo_problemi">Şişmanlık (Obezite) \nDiyabet (Şeker Hastalığı) \nKilo Problemi</string>
    <string name="e_itim">Eğitim</string>
    <string name="yeditepe_niversitesi">Yeditepe Üniversitesi</string>
    <string name="stanbul_bakirk_y">İstanbul / BAKIRKÖY</string>
    <string name="title_activity_diy1_map">diy1_map</string>
    <string name="title_activity_diy2_map">diy2_map</string>
    <string name="stanbul_hali_niversitesi">İstanbul Haliç Üniversitesi</string>
    <string name="_1993_stanbul_do_umluyum_ama_aslen_makedonya_manast_r_l_y_m_lise_renimimi_bayrampa_a_tuna_lisesi_nde_tamamlad_m_stanbul_hali_niversitesi_sa_l_k_bilimleri_y_ksekokulu_beslenme_ve_diyetetik_b_l_m_nden_2016_y_l_nda_mezun_oldum_apa_e_itim_ve_ara_t_rma_hastanesi_nde_yeti_kin_diyabet_klinik_staj_m_zel_gaziosmanpa_a_hastanesi_nde_toplu_beslenme_kurum_staj_m_stanbul_fizik_tedavi_rehabilitasyon_e_itim_ve_ara_t_rma_hastanesi_nde_yeti_kin_klinik_staj_m_yapt_m">1993, İstanbul doğumluyum ama aslen Makedonya Manastır\'lıyım. Lise öğrenimimi Bayrampaşa Tuna Lisesi’nde tamamladım. İstanbul Haliç Üniversitesi Sağlık Bilimleri Yüksekokulu Beslenme ve Diyetetik Bölümü’nden 2016 yılında mezun oldum. Çapa Eğitim ve Araştırma Hastanesi\'nde yetişkin diyabet klinik stajımı , Özel Gaziosmanpaşa Hastanesi\'nde toplu beslenme kurum stajımı, İstanbul Fizik Tedavi Rehabilitasyon Eğitim ve Araştırma Hastanesi\'nde yetişkin klinik stajımı yaptım.</string>
    <string name="stanbul_beykoz">İstanbul / BEYKOZ</string>
    <string name="dyt_hakan_beyaz">DYT. HAKAN BEYAZ</string>
    <string name="i_manl_k_obezite_nsporcu_beslenmesi_nkilo_problemi">Şişmanlık (Obezite) \nSporcu beslenmesi \nKilo Problemi</string>
    <string name="marmara_nivesitesi">Marmara Ünivesitesi</string>
    <string name="k_rklareli_fen_lisesinden_mezun_olduktan_sonra_y_ksek_renimimi_marmara_niversitesinde_3_40_ortalama_ile_onur_rencisi_olarak_tamamlad_m_ve_marmara_niversitesi_beslenme_ve_diyetetik_b_l_m_nden_mezun_oldum_mezuniyetimin_ard_ndan_ara_vermeden_stanbul_g_ztepe_medicalpark_hastanesinde_al_ma_hayat_na_ilk_ad_m_m_att_m">Kırklareli Fen Lisesinden mezun olduktan sonra yüksek öğrenimimi Marmara Üniversitesinde 3,40 ortalama ile onur öğrencisi olarak tamamladım ve Marmara Üniversitesi beslenme ve diyetetik bölümünden mezun oldum.Mezuniyetimin ardından ara vermeden İstanbul Göztepe Medicalpark Hastanesinde çalışma hayatına ilk adımımı attım.</string>
    <string name="marmara_niversitesi">Marmara Üniversitesi</string>
    <string name="ben_diyetisyen_nejla_kazo_lu_1993_y_l_nda_anl_urfa_da_do_dum_lk_orta_ve_lise_e_itimimi_anl_urfa_da_tamamlad_m_anl_urfa_anadolu_lisesi_nden_mezun_olduktan_sonra_medipol_niversitesi_beslenme_ve_diyetetik_b_l_m_n_kazanarak_hem_stanbul_hem_de_diyetisyenlik_maceram_ba_lam_bulundu">Ben, Diyetisyen Nejla Kazoğlu… 1993 yılında Şanlıurfa’da doğdum. İlk-orta ve lise eğitimimi Şanlıurfa’da tamamladım. Şanlıurfa Anadolu Lisesi’nden mezun olduktan sonra Medipol Üniversitesi Beslenme ve Diyetetik bölümünü kazanarak hem İstanbul hem de diyetisyenlik maceram başlamış bulundu.</string>
    <string name="zaten_bir_hesab_n_z_m_var_giri_yap">Zaten bir hesabınız mı var? Giriş yap.</string>
    <string name="bm">BMİ :</string>
    <string name="boy">Boy :</string>
    <string name="kilo">Kilo :</string>
    <string name="kullan_c_smi">Kullanıcı İsmi</string>
    <string name="todo">TODO</string>
    <string name="diy_mesj2">diy_mesj2</string>
    <string name="diy_mesj3">diy_mesj3</string>
    <string name="diy_mesj4">diy_mesj4</string>
    <string name="diy_mesj5">diy_mesj5</string>
    <string name="diy_mesj1">diy_mesj1</string>
    <string name="todo223">TODO</string>
    <string name="todo12312">TODO</string>
    <string name="kilonuz_AYAR">Kilonuz :</string>
    <string name="kaydet_AYAR">KAYDET</string>
    <string name="boyunuz_AYAR">Boyunuz :</string>
    <string name="su_hedefiniz_AYAR">Su hedefiniz :</string>
    <string name="rn_176">ÖRN: 176</string>
    <string name="rn_86">ÖRN: 86</string>
    <string name="rn_4">ÖRN: 4</string>
    <string name="ekle">EKLE</string>
    <string name="profil_foto_raf_ekle">Profil Fotoğrafı Ekle</string>
    <string name="todo8889">TODO</string>
    <string name="diy6" />
    <string name="diy7" />
    <string name="diy8" />
    <string name="diy9" />
    <string name="diy10" />
    <string name="sabah_kalk_nca_2_bardak_su_n_n_n_n_kahvalt_1_tam_yumurta_2_yumurta_beyaz_ile_yap_lm_mantarl_lorlu_omlet_2_3_dilim_tam_bu_day_ekme_i_50_gr_az_ya_l_beyaz_peynir_5_6_adet_zeytin_n_n_nara_n_1_porsiyon_meyve_15_adet_i_badem_veya_f_nd_k_n_n_n_n_n_len_200_gr_zgara_tavuk_ile_yap_lm_salata_veya_ha_lama_tavuk_1_kase_yo_urt_2_3_dilim_tam_bu_day_ekme_i_n_n_n_n_ara_n_200_ml_s_t_veya_kefir_2_adet_kuru_incir_n_n_n_n_ak_am_150_gr_zgara_ya_s_z_dana_eti_veya_k_fte_izgara_sebze_veya_1_porsiyon_zeytinya_l_sebze_yeme_i_1_porsiyon_kepekli_makarna_veya_bulgur_pilav_n_n_n_n_gece_200_ml_light_s_t">Sabah kalkınca: 2 bardak su \n\n\n\n Kahvaltı: 1 tam yumurta + 2 yumurta beyazı ile yapılmış mantarlı/lorlu omlet 2-3 dilim tam buğday ekmeği 50 gr az yağlı beyaz peynir 5-6 adet zeytin \n\n\nAra öğün: 1 porsiyon meyve + 15 adet çiğ badem veya fındık \n\n\n\n\n Öğlen: 200 gr ızgara tavuk ile yapılmış salata veya haşlama tavuk 1 kase yoğurt 2-3 dilim tam buğday ekmeği \n\n\n\n Ara öğün: 200 ml süt veya kefir + 2 adet kuru incir \n\n\n\n Akşam: 150 gr ızgara yağsız dana eti veya köfte Izgara sebze veya 1 porsiyon zeytinyağlı sebze yemeği 1 porsiyon kepekli makarna veya bulgur pilavı \n\n\n\n Gece: 200 ml light süt</string>
    <string name="_1_335_kalori_n_n_n_n_sabah_uyan_nca_2_su_barda_l_k_su_n_n_n_n_kahvalt_n_1_bardak_ekersiz_a_k_taze_limon_ilaveli_siyah_ay_n_2_dilim_tam_tah_ll_ekmek_n_1_dilim_peynir_n_1_yemek_ka_kadar_tahin_pekmez_kar_m_n_1_avu_maydanoz_n_ara_n_2_mandalina_n_n_n_n_n_len_3_4_adet_k_fte_n_1_dilim_tam_tah_ll_ekmek_n_bol_salata_az_zeytinya_l_n_ara_n_1_su_barda_kefir_n_n_n_n_n_ak_am_1_adet_orta_boy_bal_k_n_1_dilim_tam_tah_ll_ekmek_n_bol_salata_az_zeytinya_ilaveli_n_n_n_n_n_ara_n_1_kase_nar">1.335 kalori \n\n\n\n Sabah Uyanınca: 2 su bardağı ılık su \n\n\n\n Kahvaltı: \n 1 bardak şekersiz, açık, taze limon ilaveli siyah çay\n 2 dilim tam tahıllı ekmek\n 1 dilim peynir\n 1 yemek kaşığı kadar tahin-pekmez karışımı\n 1 avuç maydanoz\n Ara Öğün: 2 mandalina\n \n\n\n\n Öğlen: 3-4 adet köfte\n 1 dilim tam tahıllı ekmek\n Bol salata (az zeytinyağlı).\n Ara Öğün: 1 su bardağı kefir\n \n\n\n\n Akşam: 1 adet orta boy balık\n 1 dilim tam tahıllı ekmek\n Bol salata (az zeytinyağı ilaveli).\n \n\n\n\n Ara Öğün: 1 kase nar</string>
    <string name="_1_360_kalori_n_n_nsabah_uyan_nca_2_su_barda_l_k_su_kahvalt_1_su_barda_s_t_4_5_yemek_ka_m_sli_ve_yulaf_ezmesi_kar_m_4_5_adet_tam_ceviz_n_n_n_nara_n_1_adet_kivi_n_n_n_n_len_3_4_adet_k_fte_1_dilim_tam_tah_ll_ekmek_bol_salata_az_zeytinya_ilaveli_n_n_n_nara_n_1_dilim_peynir_1_dilim_tam_tah_ll_ekmek_1_mandalina_n_n_n_nak_am_1_adet_orta_boy_bal_k_1_adet_ha_lanm_veya_zgara_orta_boy_patates_bol_salata_az_zeytinya_ilaveli_n_n_n_nara_n_bol_salatal_k_dilerseniz_ok_az_tuz_serpebilirsiniz">1.360 kalori \n\n\nSabah Uyanınca: 2 su bardağı ılık su Kahvaltı: 1 su bardağı süt 4-5 yemek kaşığı müsli ve yulaf ezmesi karışımı 4-5 adet tam ceviz \n\n\n\nAra Öğün: 1 adet kivi \n\n\n\nÖğlen: 3-4 adet köfte 1 dilim tam tahıllı ekmek Bol salata (az zeytinyağı ilaveli). \n\n\n\nAra Öğün: 1 dilim peynir, 1 dilim tam tahıllı ekmek, 1 mandalina \n\n\n\nAkşam: 1 adet orta boy balık 1 adet haşlanmış veya ızgara orta boy patates Bol salata (az zeytinyağı ilaveli). \n\n\n\nAra Öğün: Bol salatalık (dilerseniz çok az tuz serpebilirsiniz).</string>
</resources>