<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/agreen"
    tools:context=".user_sign">


    <Button
        android:id="@+id/kayit_btn"
        android:layout_width="292dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/green"
        android:text="@string/kayit_oll"
        android:textColor="#FAFAFA"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.604" />

    <EditText
        android:id="@+id/kayit_ad"
        android:layout_width="291dp"
        android:layout_height="74dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ad_soyad"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#424242"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <EditText
        android:id="@+id/kayit_eposta"
        android:layout_width="291dp"
        android:layout_height="74dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/eposta"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#424242"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <EditText
        android:id="@+id/kayit_sifre"
        android:layout_width="291dp"
        android:layout_height="74dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/kayit_sayfa_sifre"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#424242"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zaten_bir_hesab_n_z_m_var_giri_yap"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695" />

</androidx.constraintlayout.widget.ConstraintLayout>