<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/agreen"
    tools:context=".message">

    <ImageButton
        android:id="@+id/diy_mes2"
        android:layout_width="397dp"
        android:layout_height="78dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/diy_mesj2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286"
        app:srcCompat="@drawable/ahmet_mesajimg"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/diy_mes3"
        android:layout_width="397dp"
        android:layout_height="78dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/diy_mesj3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        app:srcCompat="@drawable/hakan_mesajimg"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/diy_mes4"
        android:layout_width="397dp"
        android:layout_height="78dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/diy_mesj4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569"
        app:srcCompat="@drawable/ayse_mesajimg"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/diy_mes5"
        android:layout_width="397dp"
        android:layout_height="78dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/diy_mesj5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705"
        app:srcCompat="@drawable/sinem_mesajimg"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/diy_mes1"
        android:layout_width="397dp"
        android:layout_height="78dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/diy_mesj1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131"
        app:srcCompat="@drawable/orkun_mesajimg"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>