<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/agreen"
    tools:context=".user_login">


    <Button
        android:id="@+id/giris_btn"
        android:layout_width="287dp"
        android:layout_height="59dp"
        android:backgroundTint="@color/green"
        android:text="@string/giris_yap"
        android:textColor="#FAFAFA"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648" />

    <EditText
        android:id="@+id/giris_sifre"
        android:layout_width="287dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/giris_sayfa_sifre"
        android:inputType="textPassword"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/kayit_ol_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kayit_ol_giris"
        android:textColor="#424242"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792" />

    <EditText
        android:id="@+id/giris_eposta"
        android:layout_width="287dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/eposta"
        android:inputType="textEmailAddress"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>